--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "university-management-system",
   "version": "1.0.0",
   "main": "src/server.ts",
-  "license": "MIT",
-  "author": "Sahidul Islam",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint . --fix",
-    "prettier:check": "prettier --ignore-path .gitignore --write \\\"**/*.+(js|ts|json)\\\"",
+    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "lint-prettier": "yarn lint:check && yarn prettier:check"
   },
+  "license": "MIT",
+  "author": "Sahidul Islam",
   "lint-staged": {
     "src/**/*.ts": "yarn lint-prettier"
   },
@@ -34,6 +34,6 @@
     "morgan": "^1.10.0",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "5.0.4"
   }
 }
