--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
-    "lint-prettier": "yarn lint:check && yarn prettier:check"
+    "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "prepare": "husky install"
   },
   "license": "MIT",
   "author": "Sahidul Islam",
