--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "author": "Sahidul Islam",
   "lint-staged": {
-    "src/**/*.ts": "yarn lint-prettier"
+    "src/*.ts": "yarn lint-prettier"
   },
   "dependencies": {
     "cors": "^2.8.5",
